# db-tool

./: .gitignore  CLAUDE.md  README.md  connections.yaml.example  obfuscation_rules.txt.example  pyproject.toml  run.sh  settings.env.example
config/: connections.yaml.example  exclusion_rules.txt.example  obfuscation_rules.txt.example  replacement_rules.txt.example  settings.env.example
db_tool/: logging_config.py  main.py
db_tool/cli/: commands.py  formatters.py
db_tool/config/: loader.py  models.py  validator.py
db_tool/connectors/: __init__.py  base.py  bigquery.py  mongodb.py  mysql.py
db_tool/i18n/: __init__.py
db_tool/obfuscation/: dynamic_rules.py  engine.py  exclusion_rules.py  fixed_rules.py  mappings.py  replacement_rules.py
db_tool/operations/: __init__.py  copy.py  delete.py  export.py  obfuscate.py  sync.py
db_tool/state/: manager.py
db_tool/tui/: app.py  log_buffer.py  log_handler.py  theme.py
docs/: architecture.md  connectors.md  obfuscation.md  operations.md  scripts.md
docs/code-legacy/: copy.py  delete.sh
docs/prompts/: 0-start.md  last.md  plan-logging.md  tests-generate-test-data.md  tests-test-case-edges.md
docs/sdd/: 001-logs-in-process.md  002-tui-connection-management.md  003-logging-plan.md  004-connection-string-guardian.md  005-backup-restore.md  006-direct-replacements-obf-engine.md  007-replace-flag-copy-operation.md  008-config-files-relocation.md  009-production-heuristic-block.md  010-obfuscation-exclusion-rules.md
scripts/: install.sh
tests/: conftest.py
tests/data/: docker-compose.yml  generate_test_data.py
(+38 files in other folders)
